tests/compiletests/ui/image/query/query_levels_err.stderr
error[E0277]: the trait bound `Image<f32, 4, 2, 0, 0, 1, 0, 4>: HasQueryLevels` is not satisfied
  --> $DIR/query_levels_err.rs:12:21
   |
LL |     *output = image.query_levels();
   |                     ^^^^^^^^^^^^ the trait `HasQueryLevels` is not implemented for `Image<f32, 4, 2, 0, 0, 1, 0, 4>`
   |
help: the following other types implement trait `HasQueryLevels`
  --> crates/spirv-std/src/image.rs:1718:0
  ::: crates/spirv-std/src/image.rs:1736:5
   |
   = note: `Image<SampledType, 0, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS>`
  ::: crates/spirv-std/src/image.rs:1757:5
   |
   = note: `Image<SampledType, 1, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS>`
  ::: crates/spirv-std/src/image.rs:1778:5
   |
   = note: `Image<SampledType, 2, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS>`
  ::: crates/spirv-std/src/image.rs:1799:5
   |
   = note: `Image<SampledType, 3, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS>`
note: required by a bound in `Image::<SampledType, DIM, DEPTH, ARRAYED, MULTISAMPLED, SAMPLED, FORMAT, COMPONENTS>::query_levels`
  --> crates/spirv-std/src/image.rs:966:4
   = note: this error originates in the attribute macro `crate::macros::gpu_only` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
